k8s-deploy/option-one-db-3node-cluster.yml
# TODO
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: option-one-db
spec:
  selector:
    matchLabels:
      app: option-one-db
  serviceName: "option-one-db"
  replicas: 3
  minReadySeconds: $MIN_READY_SECS
  template:
    metadata:
      labels:
        app: option-one-db
    spec:
      containers:
        - name: option-one-db
          image: ${DOCKER_REGISTRY}/option-one-db:${VERSION}
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: option-one-db
              mountPath: /db
            - name: option-one-db-bac
              mountPath: /backup
  volumeClaimTemplates:
    - metadata:
        name: option-one-db
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: $K8S_STORAGE_CLASS
        resources:
          requests:
            storage: 5Gi
    - metadata:
        name: option-one-db-bac
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: $K8S_STORAGE_CLASS
        resources:
          requests:
            storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: option-one-db
  labels:
    app: option-one-db
spec:
  type: ClusterIP
  selector:
    app: option-one-db
  ports:
  - name: http
    port: 80
    targetPort: 9000
    protocol: TCP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: option-one-db
spec:
  parentRefs:
  - name: $K8S_GATEWAY
    namespace: $K8S_GATEWAY_NS
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /option-one-db
    backendRefs:
    - name: option-one-db
      port: 80
