k8s-deploy/option-one-single.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: option-one-db-single
spec:
  selector:
    matchLabels:
      app: option-one-db-single
  serviceName: "option-one-db-single"
  replicas: 1
  template:
    metadata:
      labels:
        app: option-one-db-single
    spec:
      containers:
        - name: option-one-db-single
          image: ${DOCKER_REGISTRY}/option-one-db:${VERSION}-single
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: single-db
              mountPath: /db
            - name: option-one-db-bac
              mountPath: /backup
  volumeClaimTemplates:
    - metadata:
        name: single-db
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName:  $K8S_STORAGE_CLASS
        resources:
          requests:
            storage: 1Gi
    - metadata:
        name: option-one-db-bac
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: $K8S_STORAGE_CLASS
        resources:
          requests:
            storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: option-one-db-single
  labels:
    app: option-one-db-single
spec:
  type: ClusterIP
  selector:
    app: option-one-db-single
  ports:
  - name: http
    port: 80
    targetPort: 9000
    protocol: TCP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: option-one-db-single
spec:
  parentRefs:
  - name: $K8S_GATEWAY
    namespace: $K8S_GATEWAY_NS
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /option-one-db-single
    backendRefs:
    - name: option-one-db-single
      port: 80
